--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,8 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  username: kool
-  password: 123456
+  DATABASE_USER_NAME='trantri'
+  DATABASE_PASSWORD='123456'
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("DB_MAX_THREADS") { 5 } %>
