--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # .env.development
 # .env.test
 APP_ENV='development'
-DATABASE_USER_NAME='trantri'
+DATABASE_USER_NAME='kool'
 DATABASE_PASSWORD='123456'
 DATABSE_URL='rack_app'
