--- a/config/database.yml
+++ b/config/database.yml
@@ -16,9 +16,8 @@
 #
 default: &default
   adapter: postgresql
-  encoding: unicode
-  DATABASE_USER_NAME='trantri'
-  DATABASE_PASSWORD='123456'
+  username: <%= ENV.fetch('DATABASE_USER_NAME') %>
+  password: <%= ENV.fetch('DATABASE_PASSWORD') %>
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("DB_MAX_THREADS") { 5 } %>
