send email user

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ APP_ENV='development'
 DATABASE_USER_NAME='kool'
 DATABASE_PASSWORD='123456'
 DATABSE_URL='rack_app'
+SENDGRID_API_KEY='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
